--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@types/config": "0.0.36",
     "config": "^3.2.5",
+    "fastify": "^2.11.0",
+    "fastify-plugin": "^1.6.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
   },
