--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "config": "^3.2.5",
     "fastify": "^2.11.0",
     "fastify-plugin": "^1.6.0",
+    "fastify-swagger": "^2.5.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
   },
