--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fastify": "^2.11.0",
     "fastify-plugin": "^1.6.0",
     "fastify-swagger": "^2.5.0",
+    "http-status-codes": "^1.4.0",
     "mongoose": "^5.8.10",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
