--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/config": "0.0.36",
     "@types/mongoose": "^5.7.0",
+    "bcrypt": "^3.0.8",
     "config": "^3.2.5",
     "fastify": "^2.11.0",
     "fastify-plugin": "^1.6.0",
@@ -22,6 +23,7 @@
     "winston-daily-rotate-file": "^4.4.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/node": "^13.5.0",
     "typescript": "^3.7.5"
   }
