--- a/mail-server/package.json
+++ b/mail-server/package.json
@@ -2,7 +2,12 @@
   "name": "haraka_local",
   "description": "An SMTP Server",
   "version": "0.0.1",
-  "dependencies": {},
+  "dependencies": {
+    "@grpc/proto-loader": "^0.5.3",
+    "grpc": "^1.24.2",
+    "haraka-dsn": "^1.0.3",
+    "promisify-call": "^2.0.4"
+  },
   "repository": "",
   "license": "MIT"
 }
