--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@grpc/proto-loader": "^0.5.3",
     "@types/config": "0.0.36",
     "@types/mongoose": "^5.7.0",
     "bcrypt": "^3.0.8",
@@ -17,7 +18,9 @@
     "fastify": "^2.11.0",
     "fastify-plugin": "^1.6.0",
     "fastify-swagger": "^2.5.0",
+    "grpc": "^1.24.2",
     "http-status-codes": "^1.4.0",
+    "mali": "^0.20.0",
     "mongoose": "^5.8.10",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
