--- a/mail-server/package.json
+++ b/mail-server/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "@grpc/proto-loader": "^0.5.3",
     "grpc": "^1.24.2",
+    "grpc-promise": "^1.4.0",
     "haraka-dsn": "^1.0.3",
-    "promisify-call": "^2.0.4"
+    "libmime": "^4.2.1",
+    "mime-types": "^2.1.26",
+    "promisify-call": "^2.0.4",
+    "uuid": "^3.4.0"
   },
   "repository": "",
   "license": "MIT"
