--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^3.0.8",
     "config": "^3.2.5",
     "fastify": "^2.11.0",
+    "fastify-jwt": "^1.2.1",
     "fastify-plugin": "^1.6.0",
     "fastify-swagger": "^2.5.0",
     "grpc": "^1.24.2",
