--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@grpc/proto-loader": "^0.5.3",
     "@types/config": "0.0.36",
     "@types/mongoose": "^5.7.0",
+    "@types/object-path": "^0.11.0",
     "bcrypt": "^3.0.8",
     "config": "^3.2.5",
     "fastify": "^2.11.0",
