saving outbound email in DB with attachments

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/config": "0.0.36",
     "@types/express-fileupload": "^1.1.2",
     "@types/mongoose": "^5.7.0",
+    "@types/nodemailer": "^6.4.0",
     "@types/object-path": "^0.11.0",
     "bcrypt": "^3.0.8",
     "config": "^3.2.5",
@@ -27,6 +28,7 @@
     "mali": "^0.20.0",
     "mongodb-extended-json": "^1.11.0",
     "mongoose": "^5.8.10",
+    "nodemailer": "^6.4.3",
     "object-path": "^0.11.4",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
