--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "fastify-swagger": "^2.5.0",
     "grpc": "^1.24.2",
     "http-status-codes": "^1.4.0",
+    "libmime": "^4.2.1",
+    "libqp": "^1.1.0",
     "mali": "^0.20.0",
     "mongodb-extended-json": "^1.11.0",
     "mongoose": "^5.8.10",
     "nodemailer": "^6.4.3",
     "object-path": "^0.11.4",
+    "punycode": "^2.1.1",
     "uuid": "^7.0.3",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
