--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@grpc/proto-loader": "^0.5.3",
     "@types/config": "0.0.36",
     "@types/express-fileupload": "^1.1.2",
+    "@types/ioredis": "^4.14.9",
     "@types/mongoose": "^5.7.0",
     "@types/nodemailer": "^6.4.0",
     "@types/object-path": "^0.11.0",
@@ -28,6 +29,7 @@
     "grpc": "^1.24.2",
     "he": "^1.2.0",
     "http-status-codes": "^1.4.0",
+    "ioredis": "^4.16.2",
     "libmime": "^4.2.1",
     "libqp": "^1.1.0",
     "mali": "^0.20.0",
